flex fix/scrollbar display fix

--- a/src/components/MainTable/style.scss
+++ b/src/components/MainTable/style.scss
@@ -1,6 +1,6 @@
 .main-wrapper {
     max-width: 90vh;
-    max-height: 80vh;
+    max-height: 95vh;
     min-width: 50vh;
     display: flex;
     flex-direction: column;
@@ -17,5 +17,8 @@
         justify-content: center;
         overflow: scroll;
         scrollbar-width: none;
+        &::-webkit-scrollbar {
+            display: none;
+          }
     }
 }
